		done in amule-cvs directory.
		* Implemented changes suggested by bootstrap in aMule-CVS.spec,
		merged all the packages in a single rpm, changed the packager
		to "The aMule Team" and updated %BuildPreReq.
		* Fixed a crash in ListenSocket.cpp when a client could
		disconnect suddenly.

	volpol:
		* Patch to fix use of deprecated functions in wxGTK-2.5.3.

	Xaignar:
		* Fixed entries for connected servers in server-list not being
		  completly reverted to normal after disconnection.
		* Added handling of SIGINT and SIGTERM for gracefull shutdowns.
		* Renamed the config file from ~/.eMule to ~/.aMule/amule.conf.
		  The old file will not be removed, in order to allow backwards
		  compatibility.
		* aMule now automatically removes unavailable files from the 
		  list of shared files.
		* Fixed right-clicking not selecting the tab being clicked on.
		* Fixed casts to pointers of higher alignment where it could
		  cause allignment crashes on SPARC, created general function
		  for doing this safely both SPARC and non-SPARC machinces.
		* Added a typesafe replacement for printf, designed with 
		  inspiration from the format class in the boost library.
		* Improved logging capabilities. It is now possible to enable/
		  disable debugging output by category. All existing debug 
		  calls where changed to support this. This can be controlled
		  in the preference dialog.
		* Fixed some problems with the connect dialog for remote gui.
		* Some pass-by-value fixes.
		* Moving de-initialization code from the CamuleApp destructor
		  to OnExit. This insures that the app-object would be valid
		  while the shutdown is in progress.
		* Moved deinialization code from OnRun in amuled to OnExit in
		  order to ensure that it was also run on premature exits.
		* Made safe connection-rate calculations the default behavior,
		  which should help avoid too fast connections.
		* Add class for keeping track of unusable sources, based on